Data Labelling & Visualisasi WordCloud

--- a/Umma_Prayer_App_Sentiment_Analysis.ipynb
+++ b/Umma_Prayer_App_Sentiment_Analysis.ipynb
@@ -733,35 +733,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pGFzMazlFcE6",
-        "outputId": "32ce729b-c2fb-46a3-cd94-e185cef6406d"
+        "outputId": "08376535-19b3-4f0a-cdd8-c0f9979d05c8"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting google-play-scraper\n",
-            "  Downloading google_play_scraper-1.2.7-py3-none-any.whl.metadata (50 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/50.2 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.2/50.2 kB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading google_play_scraper-1.2.7-py3-none-any.whl (28 kB)\n",
-            "Installing collected packages: google-play-scraper\n",
-            "Successfully installed google-play-scraper-1.2.7\n",
-            "Collecting sastrawi\n",
-            "  Downloading Sastrawi-1.0.1-py2.py3-none-any.whl.metadata (909 bytes)\n",
-            "Downloading Sastrawi-1.0.1-py2.py3-none-any.whl (209 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m209.7/209.7 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: sastrawi\n",
-            "Successfully installed sastrawi-1.0.1\n",
+            "Requirement already satisfied: google-play-scraper in /usr/local/lib/python3.12/dist-packages (1.2.7)\n",
+            "Requirement already satisfied: sastrawi in /usr/local/lib/python3.12/dist-packages (1.0.1)\n",
             "Requirement already satisfied: nltk in /usr/local/lib/python3.12/dist-packages (3.9.1)\n",
             "Requirement already satisfied: click in /usr/local/lib/python3.12/dist-packages (from nltk) (8.2.1)\n",
             "Requirement already satisfied: joblib in /usr/local/lib/python3.12/dist-packages (from nltk) (1.5.2)\n",
             "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.12/dist-packages (from nltk) (2024.11.6)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from nltk) (4.67.1)\n",
-            "Collecting swifter\n",
-            "  Downloading swifter-1.4.0.tar.gz (1.2 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m15.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: swifter in /usr/local/lib/python3.12/dist-packages (1.4.0)\n",
             "Requirement already satisfied: pandas>=1.0.0 in /usr/local/lib/python3.12/dist-packages (from swifter) (2.2.2)\n",
             "Requirement already satisfied: psutil>=5.6.6 in /usr/local/lib/python3.12/dist-packages (from swifter) (5.9.5)\n",
             "Requirement already satisfied: dask>=2.10.0 in /usr/local/lib/python3.12/dist-packages (from dask[dataframe]>=2.10.0->swifter) (2025.5.0)\n",
@@ -779,14 +766,7 @@
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas>=1.0.0->swifter) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas>=1.0.0->swifter) (2025.2)\n",
             "Requirement already satisfied: locket in /usr/local/lib/python3.12/dist-packages (from partd>=1.4.0->dask>=2.10.0->dask[dataframe]>=2.10.0->swifter) (1.0.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas>=1.0.0->swifter) (1.17.0)\n",
-            "Building wheels for collected packages: swifter\n",
-            "  Building wheel for swifter (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for swifter: filename=swifter-1.4.0-py3-none-any.whl size=16505 sha256=2a9de6b27743af10fb0b7ce28b298fd12e63fc4092775d1f5616d84ac98db97a\n",
-            "  Stored in directory: /root/.cache/pip/wheels/d9/31/ff/ff51141a088571a9f672449e5aad5ea8bb35ca5d95ba135f30\n",
-            "Successfully built swifter\n",
-            "Installing collected packages: swifter\n",
-            "Successfully installed swifter-1.4.0\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas>=1.0.0->swifter) (1.17.0)\n"
           ]
         }
       ]
@@ -844,25 +824,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9cc4f93f-96ba-4fca-8b54-e4dc0402b1fd"
+        "outputId": "79175f2e-d49b-41f3-aecb-ce8f2811f650"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
-            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Slang dictionary loaded succesfully: [('@', 'di'), ('abis', 'habis'), ('wtb', 'beli'), ('masi', 'masih'), ('wts', 'jual')]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
           ]
         }
       ]
@@ -895,7 +875,7 @@
       "metadata": {
         "id": "GTy8liYBQD3p"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -913,7 +893,7 @@
       "metadata": {
         "id": "S4oRwFULn9b8"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -936,7 +916,7 @@
       "metadata": {
         "id": "HPDaZ6H862X8"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -954,9 +934,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "32376a21-4c4c-4881-b76d-a3f8747b0ef1"
+        "outputId": "cf6c212e-de4c-4ad6-b0ac-e4aff94f2a19"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -981,9 +961,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 675
         },
-        "outputId": "fbd34dc8-c72d-4f28-834c-705b11359c00"
+        "outputId": "9e298111-b560-4410-beda-58b2357d9f4e"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1019,7 +999,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c5cc335a-f28b-45f2-b91b-6acdbd062fc0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f7a0820e-706c-4cc1-bb74-7ab475142bf5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1128,7 +1108,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c5cc335a-f28b-45f2-b91b-6acdbd062fc0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f7a0820e-706c-4cc1-bb74-7ab475142bf5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1180,12 +1160,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c5cc335a-f28b-45f2-b91b-6acdbd062fc0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f7a0820e-706c-4cc1-bb74-7ab475142bf5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c5cc335a-f28b-45f2-b91b-6acdbd062fc0');\n",
+              "        const element = document.querySelector('#df-f7a0820e-706c-4cc1-bb74-7ab475142bf5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1205,8 +1185,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-40e9a4e9-f0f7-42d4-bc3d-fbb6c3b7d178\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-40e9a4e9-f0f7-42d4-bc3d-fbb6c3b7d178')\"\n",
+              "    <div id=\"df-a8bb46de-2ee2-45eb-97b9-2c53bc8bec6c\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a8bb46de-2ee2-45eb-97b9-2c53bc8bec6c')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1325,7 +1305,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-40e9a4e9-f0f7-42d4-bc3d-fbb6c3b7d178 button');\n",
+              "            document.querySelector('#df-a8bb46de-2ee2-45eb-97b9-2c53bc8bec6c button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1342,7 +1322,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 10
         }
       ]
     },
@@ -1357,9 +1337,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d6993712-9db5-4627-f4f6-1b52e24293fe"
+        "outputId": "2eb91612-9c60-4e49-b2f8-4cdcbb6ec562"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1404,12 +1384,12 @@
       ],
       "metadata": {
         "id": "AjK6_F1gD_IT",
-        "outputId": "94a29d43-f5a7-4f11-b0ea-7d3de27e9d27",
+        "outputId": "3feb7720-7986-4fef-d975-c71e4ba77792",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1443,13 +1423,13 @@
       ],
       "metadata": {
         "id": "4rp5fuNGJ0-c",
-        "outputId": "a6af57b5-b10e-446a-9bf0-fd7d7413458e",
+        "outputId": "8ae02c9c-83d1-4875-df5c-1f63e48435ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
         }
       },
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1467,7 +1447,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-dd88c3e4-91ac-42e4-99fb-da72a7bbdddc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-085493d9-b456-448d-9251-1a997f7dc585\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1520,7 +1500,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dd88c3e4-91ac-42e4-99fb-da72a7bbdddc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-085493d9-b456-448d-9251-1a997f7dc585')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1572,12 +1552,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-dd88c3e4-91ac-42e4-99fb-da72a7bbdddc button.colab-df-convert');\n",
+              "        document.querySelector('#df-085493d9-b456-448d-9251-1a997f7dc585 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-dd88c3e4-91ac-42e4-99fb-da72a7bbdddc');\n",
+              "        const element = document.querySelector('#df-085493d9-b456-448d-9251-1a997f7dc585');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1597,8 +1577,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-33e38a81-be05-4640-a0b2-d414d8d7993c\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-33e38a81-be05-4640-a0b2-d414d8d7993c')\"\n",
+              "    <div id=\"df-f34aa97a-8888-4036-924f-80edc33c26d6\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f34aa97a-8888-4036-924f-80edc33c26d6')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1717,7 +1697,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-33e38a81-be05-4640-a0b2-d414d8d7993c button');\n",
+              "            document.querySelector('#df-f34aa97a-8888-4036-924f-80edc33c26d6 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1734,7 +1714,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 13
         }
       ]
     },
@@ -1794,7 +1774,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1814,11 +1794,10 @@
         "id": "37gUlLxM-3y2",
         "outputId": "dd2600cd-5a48-41a0-9bad-3c402938d8bb",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2249,7 +2228,7 @@
       "metadata": {
         "id": "PZPR-PvXTiac"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2321,7 +2300,7 @@
         "id": "W8iZLH1tUvh5",
         "outputId": "62ae8bee-2554-44ee-c50e-bc4ac72596ef"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "data": {
@@ -2531,7 +2510,7 @@
         },
         "outputId": "9d57ecd0-4476-42c4-f68c-d4d6f913f37a"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2647,7 +2626,7 @@
         "id": "2zJ7yCzniCIo",
         "outputId": "153788bc-6266-4e5c-c8fa-1d220c16f88c"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
